--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Game</title>
+    <title>Fishy Defense</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+
+    <img id="layer1" src="/asset/layer1.png">
+    <img id="layer2" src="/asset/layer2.png">
+    <img id="layer3" src="/asset/layer3.png">
+    <img id="layer4" src="/asset/layer4.png">
+
     <script src="./script.js"></script>
 </body>
 </html>
