--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
-
-    <img id="layer1" src="/asset/layer1.png">
-    <img id="layer2" src="/asset/layer2.png">
-    <img id="layer3" src="/asset/layer3.png">
-    <img id="layer4" src="/asset/layer4.png">
-
+    <!-- character -->
+    <!-- props -->
+    <!-- environment -->
+    <img id="layer1" src="/asset/layer1.png" alt="under water sky">
+    <img id="layer2" src="/asset/1 (2).png" alt="under water sky">
+    <img id="layer3" src="/asset/floor.png" alt="under water sky">
+    <!-- <img id="layer4" src="/asset/frontview.png" alt="under water sky"> -->
     <script src="./script.js"></script>
 </body>
 </html>
