added and animated enemy sprite

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <canvas id="canvas1"></canvas>
     <!-- character -->
+    <img id = "player"src="/asset/player.png">
+    <img id = "jellyFish"src="/asset/jelly-fish.png">
     <!-- props -->
     <!-- environment -->
-    <img id="layer1" src="/asset/layer1.png" alt="under water sky">
-    <img id="layer2" src="/asset/1 (2).png" alt="under water sky">
-    <img id="layer3" src="/asset/floor.png" alt="under water sky">
-    <!-- <img id="layer4" src="/asset/frontview.png" alt="under water sky"> -->
+    <img id="background1"src="/asset/bg-1.png">
+    <img id="background2"src="/asset/bg-2.png">
     <script src="./script.js"></script>
 </body>
 </html>
