--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <canvas id="canvas1"></canvas>
     <!-- character -->
-    <img id = "player"src="/asset/player.png">
-    <img id = "jellyFish"src="/asset/jelly-fish.png">
+    <img id = "player"src="/asset/player2.png">
+    <img id = "jellyFish"src="/asset/enemy1.png">
     <!-- props -->
+    <img id = "coin"src="/asset/coin.png">
     <!-- environment -->
     <img id="background1"src="/asset/bg-1.png">
     <img id="background2"src="/asset/bg-2.png">
