added different player state. added poisonous bubble and made bubble come directly from the players mouth

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <canvas id="canvas1"></canvas>
     <!-- character -->
-    <img id = "player"src="/asset/player2.png">
+    <img id = "playerSwimming"src="/asset/swim.png">
     <img id = "jellyFish"src="/asset/enemy1.png">
+    <img id = "idleplayer"src="/asset/idle.png">
+    <img id = "playerAttack"src="/asset/attack.png">
     <!-- props -->
-    <img id = "coin"src="/asset/coin.png">
+    <img id = "poisionBubble"src="/asset/poision.png">
     <!-- environment -->
     <img id="background1"src="/asset/bg-1.png">
     <img id="background2"src="/asset/bg-2.png">
