--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
     <canvas id="canvas1"></canvas>
     <!-- character -->
-    <img id = "playerSwimming"src="/asset/swim.png">
-    <img id = "jellyFish"src="/asset/enemy1.png">
-    <img id = "idleplayer"src="/asset/idle.png">
-    <img id = "playerAttack"src="/asset/attack.png">
+    <img id = "playerSwimming"src="./asset/swim.png">
+    <img id = "jellyFish"src="./asset/enemy1.png">
+    <img id = "idleplayer"src="./asset/idle.png">
+    <img id = "playerAttack"src="./asset/attack.png">
     <!-- props -->
-    <img id = "poisionBubble"src="/asset/poision.png">
+    <img id = "poisionBubble"src="./asset/poision.png">
+    <img id = "coin"src="./asset/coin.png">
     <!-- environment -->
-    <img id="background1"src="/asset/bg-1.png">
-    <img id="background2"src="/asset/bg-2.png">
+    <img id="background1"src="./asset/bg-1.png">
+    <img id="background2"src="./asset/bg-2.png">
     <script src="./script.js"></script>
 </body>
 </html>
