--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <img id = "poisionBubble"src="./asset/poision.png">
     <img id = "coin"src="./asset/coin.png">
     <!-- environment -->
-    <img id="background1"src="./asset/bg-1.png">
-    <img id="background2"src="./asset/bg-2.png">
+    <img id="layer1"src="./asset/test1.png">
+    <img id="layer2"src="./asset/test2.png">
     <script src="./script.js"></script>
 </body>
 </html>
