add and animate shock state of player

--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
     <audio id="clickSound" src="./asset/sounds/button-click.mp3"></audio>
     <audio id="backgroundSound" src="./asset/sounds/game-music.mp3"></audio>
     <audio id="swimSound" src="./asset/sounds/jump.wav"></audio>
-    <audio id="bubbleSound" src="./asset/sounds/bubble-creation.wav"></audio>
+    <audio id="bubbleSound" src="./asset/sounds/laser bubble sound.mp3"></audio>
     <audio id="bubbleSound1" src="./asset/sounds/bubble-pop.wav"></audio>
     <audio id="maxCoinSound" src="./asset/sounds/harp-glissando-ascending-short-103885.mp3"></audio>
+    <audio id="electricShock" src="./asset/sounds/electro-shock.mp3"></audio>
+
     <!-- <audio id="backgroundSound" src="./asset/sounds/win.mp3"></audio> -->
     <script src="./script.js"></script>
 </body>
