--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ocean</title>
+    <title>Jelly Rush</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <!-- pop up screen -->
     <div id="openingScreen">
-        <span id="opening-header">Under Water</span>
+        <span id="opening-header">Jelly Rush</span>
         <button id="playButton">Play</button>
+    </div>
+
+    <div class="died-screen">
+        <div class="died-message">
+            <span>Aww you died!</span>
+        </div>
     </div>
 
     <!-- health container -->
     <div id="health-bar-container" class="absolute health-bar-container">
         <div id="health-bar" class="health-bar"></div>
-        <img id="health-icon" class="absolute icon" src="./asset/life-icon.png"></img>
+        <img id="health-icon" class="absolute icon" src="./asset/live-icon.png"></img>
     </div>
 
      <!--top-right-->
@@ -37,7 +44,7 @@
         <!--coin container-->
         <div id="coin-container" class="amount-container-coin">
             <img id="coin-icon" class="coin_icon" src="./asset/coin-icon.png"></img>
-            <span id="coin-amount-label">0/20</span>
+            <span id="coin-amount-label">0/30</span>
         </div>
 
         <!--poison cotainer-->
@@ -49,12 +56,13 @@
 
 
     <canvas id="canvas1"></canvas>
-    <!-- character -->
+    <!-- character --> 
     <img id="playerSwimming" src="./asset/swim-green.png">
     <img id="jellyFish" src="./asset/enemy1.png">
     <img id="idleplayer" src="./asset/idle-green 1.png">
     <img id="playerAttack" src="./asset/attack-green.png">
     <img id="playerShock" src="./asset/electric-green.png">
+    <img id="playerDead" src="./asset/dead sprite sheet.png">
     <!-- props -->
     <img id="poisionBubble" src="./asset/poision.png">
     <img id="coin" src="./asset/coin.png">
@@ -68,8 +76,8 @@
     <audio id="backgroundSound" src="./asset/sounds/game-music.mp3"></audio>
     <audio id="swimSound" src="./asset/sounds/jump.wav"></audio>
     <audio id="bubbleSound" src="./asset/sounds/laser bubble sound.mp3"></audio>
-    <audio id="bubbleSound1" src="./asset/sounds/bubble-pop.wav"></audio>
-    <audio id="maxCoinSound" src="./asset/sounds/harp-glissando-ascending-short-103885.mp3"></audio>
+    <audio id="deadSound" src="./asset/sounds/dead-sound.mp3"></audio>
+    <audio id="maxCoinSound" src="./asset/sounds/coin complete.mp3"></audio>
     <audio id="electricShock" src="./asset/sounds/electro-shock.mp3"></audio>
 
     <!-- <audio id="backgroundSound" src="./asset/sounds/win.mp3"></audio> -->
