add restart to game and improve game ui

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
         <button id="playButton">Play</button>
     </div>
 
-    <div class="tutorial-container" id="tutorial-container">
-        <button id="okButton" class="ok">Ok</button>
+    <div class="tutorial-screen">
+        <div class="tutorial-container" id="tutorial-container">
+            <button id="okButton" class="ok">Ok</button>
+        </div>
     </div>
 
     <div class="died-screen" id="died-screen">
         <div class="died-message">
             <span>Aww you died!</span>
-            <button class="try-again">Try again</button>
+            <button class="try-again" id="try-again">Try again</button>
         </div>
     </div>
 
