--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- quest -->
     <div id="quest-dialog-container" class="center column tutorial-dialog-container">
         <img src="./asset/coin-icon.png">
-        <span>You are a brave fish navigating the vast ocean to collect ancient treasures scattered across the seabed.Your task is to collect these lost treasures while avoiding deadly jellyfish. </span>
+        <span>You are a brave fish navigating the vast ocean to collect coin treasures scattered across the seabed.Your task is to collect all 30 coins while avoiding deadly jellyfish. </span>
         <button id="questOkButton" class=" quest-ok-button">Lets Go</button>
         <!-- <div id="quest-ok-button" class="button center">Let's go!</div> -->
     </div>
@@ -105,10 +105,10 @@
             <span id="coin-amount-label">0/30</span>
         </div>
 
-        <div id="poison-container" class="amount-container-poison">
+        <!-- <div id="poison-container" class="amount-container-poison">
             <img id="poison-icon" class="poison_icon" src="./asset/jelly3.png"></img>
             <span id="poison-amount-label">0/10</span>
-        </div>
+        </div> -->
     </div>
 
 
@@ -118,7 +118,7 @@
     <img id="jellyFish" src="./asset/enemy1.png">
     <img id="idleplayer" src="./asset/idle-green 1.png">
     <img id="playerAttack" src="./asset/attack-green.png">
-    <img id="playerShock" src="./asset/electric-green.png">
+    <img id="playerShock" src="./asset/hurt fish.png">
     <img id="playerDead" src="./asset/dead4.png">
     <!-- props -->
     <img id="poisionBubble" src="./asset/poision.png">
@@ -138,7 +138,7 @@
     <audio id="electricShock" src="./asset/sounds/electro-shock.mp3"></audio>
     <audio id="winSound" src="./asset/sounds/win sound.mp3"></audio>
 
-    <!-- <audio id="backgroundSound" src="./asset/sounds/win.mp3"></audio> -->
+    <footer class="footer">Designed and built with <a href="https://github.com/JoyCreativeCoder/jelly-rush">Joy</a></footer>
     <script src="./script.js"></script>
 </body>
 
